@@ -44,13 +44,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.15.0</version>
                 <configuration>
-                    <source>${java.source.level}</source>
-                    <target>${java.target.level}</target>
-                    <compilerArguments>
-                        <endorseddirs>${endorsed.dir}</endorseddirs>
-                    </compilerArguments>
+                    <compilerArgs combine.children="append">
+                        <arg>-Djava.endorsed.dirs=${endorsed.dir}</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -73,7 +70,7 @@
                         </goals>
                         <configuration>
                             <outputDirectory>${endorsed.dir}</outputDirectory>
-                            <silent>true</silent>
+                            <!-- silent>true</silent -->
                             <artifactItems>
                                 <artifactItem>
                                     <groupId>javax</groupId>
